# HomeHarvest

./: .gitignore  .pre-commit-config.yaml  HomeHarvest_Demo.ipynb  LICENSE  README.md  example.py  pyproject.toml  test.py
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml
examples/: HomeHarvest_Demo.ipynb  HomeHarvest_Demo.py  price_of_land.py
homeharvest/: __init__.py  cli.py  exceptions.py  utils.py
homeharvest/core/scrapers/: __init__.py  models.py  types.py
homeharvest/core/scrapers/realtor/: __init__.py  queries.py
homeharvest/core/scrapers/redfin/: __init__.py
homeharvest/core/scrapers/zillow/: __init__.py
homeharvest/homeharvest/: utils.py
homeharvest/homeharvest/core/scrapers/realtor/: __init__.py
tests/: test_realtor.py  test_redfin.py  test_utils.py  test_zillow.py
